# aipple

./: README.md  pyproject.toml
src/: main.py  pipline.py
